# final-recurrent-soms

./: .gitignore  Cargo.toml  README.md  installer_script.iss  templates
output/bizarredao_china/: 0.txt  1.txt
sample_data/: 1.json_set  213.json_map  215.json_vis  765.json  second.json_vis  small_dataset.txt  trained.json_map
src/: data_processing.rs  main.rs  maps.rs  visualizations.rs
src/msom/: mod.rs
src/som/: mod.rs
