[package]
name = "final-recurrent-soms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
egui-modal = "0.3.5"
egui_extras = {version = "0.26.2", features = ["all_loaders"]}
egui_tiles = "0.7.2"
env_logger = "0.11.3"
finalfusion = "0.18.0"
meshgridrs = "0.1.1"
ndarray = "0.15.6"
ndarray-ndimage = "0.4.0"
ndarray-npy = "0.8.1"
ndarray-stats = "0.5.1"
rfd = "0.14.1"
tqdm = "0.6.0"
